--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -18,7 +18,7 @@
   --vt-c-text-light-1: var(--vt-c-indigo);
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.8);
+  --vt-c-text-dark-2: rgb(235, 235, 235);
 }
 
 /* semantic color variables for this project */
@@ -52,4 +52,9 @@
   .bg-dark-theme {
     background: var(--vt-c-black) !important;
   }
+}
+
+#myaias-infynify {
+  color: var(--color-text);
+  /* background: var(--color-background); */
 }
